added mapstruct + created basic get endpoints + first functional test